--- a/xJournal/Modules/JournalEntries/Views/JournalEntryCell.xib
+++ b/xJournal/Modules/JournalEntries/Views/JournalEntryCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,10 +50,11 @@
                                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fca-T6-ikT" userLabel="Chevron Image View Container">
                                                         <rect key="frame" x="412" y="263" width="30" height="30"/>
                                                         <subviews>
-                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TJE-e6-l7E">
-                                                                <rect key="frame" x="11.333333333333316" y="5.3333333333333321" width="18.666666666666671" height="20"/>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TJE-e6-l7E">
+                                                                <rect key="frame" x="15" y="6.3333333333333321" width="15" height="18.333333333333336"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
+                                                                <imageReference key="image" image="chevron.down" catalog="system" symbolScale="small"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
